--- a/mv_kecdf_frechet.slides.html
+++ b/mv_kecdf_frechet.slides.html
@@ -13184,6 +13184,12 @@ bw with least squares [1.12156416e-01 1.00000000e-10 1.03594669e-01 9.11747124e-
 <ul>
 <li>Measuring the size of the violation at each point (diff between the point of the CDF in which the violation happened, and the bound that was broken)</li>
 </ul>
+<ul>
+<li>Generating experiments</li>
+</ul>
+<ul>
+<li>Massaging outputs of the profiler</li>
+</ul>
 
 </div>
 </div>
@@ -13227,7 +13233,7 @@ bw with least squares [1.12156416e-01 1.00000000e-10 1.03594669e-01 9.11747124e-
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="And-then,-some-more">And then, some more<a class="anchor-link" href="#And-then,-some-more">&#182;</a></h2><hr>
+<h2 id="Then-more...">Then more...<a class="anchor-link" href="#Then-more...">&#182;</a></h2><hr>
 <h4 id="Hijacked-loo_likelihood()-to-make-my-own-method-in-which-violations-are-used-to-guide-the-optimization-algorithm.">Hijacked loo_likelihood() to make my own method in which violations are used to guide the optimization algorithm.<a class="anchor-link" href="#Hijacked-loo_likelihood()-to-make-my-own-method-in-which-violations-are-used-to-guide-the-optimization-algorithm.">&#182;</a></h4><ul>
 <li><p>Tried feeding number of violations to the algorithm.</p>
 <ul>
@@ -13251,12 +13257,13 @@ bw with least squares [1.12156416e-01 1.00000000e-10 1.03594669e-01 9.11747124e-
 
 </div>
 </div>
-</div></section><section>
+</div></section></section><section><section>
 <div class="cell border-box-sizing text_cell rendered">
 <div class="prompt input_prompt">
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
+<h2 id="And-then,-some-more.">And then, some more.<a class="anchor-link" href="#And-then,-some-more.">&#182;</a></h2><hr>
 <ul>
 <li><p>Tried feeding a weighted sum of the size of all violations.</p>
 <ul>
@@ -13280,7 +13287,17 @@ bw with least squares [1.12156416e-01 1.00000000e-10 1.03594669e-01 9.11747124e-
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="Yup,-I-actually-had-a-bug.">Yup, I actually had a bug.<a class="anchor-link" href="#Yup,-I-actually-had-a-bug.">&#182;</a></h2><hr>
+<h1 id="Yup,-I-actually-had-a-bug.">Yup, I actually had a bug.<a class="anchor-link" href="#Yup,-I-actually-had-a-bug.">&#182;</a></h1><hr>
+
+</div>
+</div>
+</div></section></section><section><section>
+<div class="cell border-box-sizing text_cell rendered">
+<div class="prompt input_prompt">
+</div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<h2 id="What-was-the-bug?">What was the bug?<a class="anchor-link" href="#What-was-the-bug?">&#182;</a></h2><hr>
 <ul>
 <li>While making this presentation I realized I had a bug.</li>
 </ul>
